feature/projects: add get all projects and show project
