# app/Application/Company/V1/Http/Resources/Project/MinifiedTaskResource.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Application\Company\V1\Http\Resources\Project;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="Company_MinifiedTaskResponse",
+ *     type="object",
+ *     @OA\Property(property="id", type="string", format="uuid", example="9d609e3f-c26d-4612-a1b4-71a60d2d6927"),
+ *     @OA\Property(property="project_id", type="string", format="uuid", example="9d609e3f-c26d-4612-a1b4-71a60d2d6927"),
+ *     @OA\Property(property="priority_id", type="string", format="uuid", example="9d609e3f-c26d-4612-a1b4-71a60d2d6927"),
+ *     @OA\Property(property="assigned_to", type="string", format="uuid", example="9d609e3f-c26d-4612-a1b4-71a60d2d6927"),
+ *     @OA\Property(property="title", type="string", example="create a login feature"),
+ *     @OA\Property(property="description", type="string", example="create a login feature"),
+ *     @OA\Property(property="status", type="string", example="in_progress"),
+ * )
+ * */
+class MinifiedTaskResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'project_id' => $this->project_id,
+            'priority_id' => $this->priority_id,
+            'assigned_to' => $this->assigned_to,
+            'title' => $this->title,
+            'description' => $this->description,
+            'status' => $this->status,
+        ];
+    }
+}
