# storage/api-docs/api-docs.json
@@ -729,6 +729,90 @@
                 }
             }
         },
+        "/company/v1/projects": {
+            "get": {
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Get projects",
+                "description": "Get projects",
+                "operationId": "a8ff953ab069d228b97c2157ff4a51a8",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Company_ProjectPaginatedResponse"
+                                            }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/components/schemas/PaginationMeta"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/company/v1/projects/{project}": {
+            "get": {
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Get a specific project",
+                "description": "Retrieve details of a specific project by its ID",
+                "operationId": "f42841d3c1f6bcf5cc36cd80830238a1",
+                "parameters": [
+                    {
+                        "name": "project",
+                        "in": "path",
+                        "description": "The ID of the project",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Company_FullProjectResponse"
+                                        },
+                                        "meta": {
+                                            "type": "object",
+                                            "example": null
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/employee/v1/client/login": {
             "post": {
                 "tags": [
@@ -1307,6 +1391,184 @@
                 },
                 "type": "object"
             },
+            "Company_MinifiedSprintResponse": {
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "project_id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "number": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "start": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-11-04 09:56:21"
+                    },
+                    "end": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-12-04 09:56:21"
+                    },
+                    "goal": {
+                        "type": "string",
+                        "example": "feature x"
+                    },
+                    "status": {
+                        "type": "string",
+                        "example": "in_progress"
+                    }
+                },
+                "type": "object"
+            },
+            "Company_MinifiedTaskResponse": {
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "project_id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "priority_id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "assigned_to": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "title": {
+                        "type": "string",
+                        "example": "create a login feature"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "create a login feature"
+                    },
+                    "status": {
+                        "type": "string",
+                        "example": "in_progress"
+                    }
+                },
+                "type": "object"
+            },
+            "Company_ProjectPaginatedResponse": {
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "default company team #1730382974"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "default company department #1730382974"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-11-04 09:56:21"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-11-04 09:56:21"
+                    },
+                    "companies": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_CompanyResponse"
+                        }
+                    },
+                    "departments": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedCompanyDepartmentResponse"
+                        }
+                    },
+                    "sprints": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedSprintResponse"
+                        }
+                    },
+                    "tasks": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedTaskResponse"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "Company_FullProjectResponse": {
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "example": "9d609e3f-c26d-4612-a1b4-71a60d2d6927"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "default company team #1730382974"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "default company department #1730382974"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-11-04 09:56:21"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-11-04 09:56:21"
+                    },
+                    "companies": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_CompanyResponse"
+                        }
+                    },
+                    "departments": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedCompanyDepartmentResponse"
+                        }
+                    },
+                    "sprints": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedSprintResponse"
+                        }
+                    },
+                    "tasks": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Company_MinifiedTaskResponse"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "Employee_EmployeeResponse": {
                 "properties": {
                     "message": {
@@ -1422,6 +1684,10 @@
         {
             "name": "Teams",
             "description": "Teams"
+        },
+        {
+            "name": "Projects",
+            "description": "Projects"
         }
     ]
 }
